--- a/website/static/index.html
+++ b/website/static/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=docs/get-started/home">
-        <script type="text/javascript">
-            window.location.href = "docs/get-started/home"
-        </script>
-        <title>Your Site Title Here</title>
-    </head>
-    <body>
-        If you are not redirected automatically, follow this <a href='docs/get-started/home'>link</a>.
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=docs/get-started">
+    <script type="text/javascript">
+        window.location.href = "docs/get-started"
+    </script>
+    <title>Webiny Documentation</title>
+</head>
+
+<body>
+    If you are not redirected automatically, follow this <a href='docs/get-started'>link</a>.
+</body>
+
 </html>
