--- a/website/static/index.html
+++ b/website/static/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=docs/get-started">
     <script type="text/javascript">
-        window.location.href = "docs/get-started"
+        window.location.href = "docs/quick-start"
     </script>
     <title>Webiny Documentation</title>
 </head>
 
 <body>
-    If you are not redirected automatically, follow this <a href='docs/get-started'>link</a>.
+    If you are not redirected automatically, follow this <a href='docs/quick-start'>link</a>.
 </body>
 
 </html>
