Fix links and add redirects.

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en-US">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=docs/get-started">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=docs/get-started" />
     <script type="text/javascript">
-        window.location.href = "docs/get-started/quick-start"
+      window.location.href = "docs/webiny/introduction";
     </script>
     <title>Webiny Documentation</title>
-</head>
+  </head>
 
-<body>
-    If you are not redirected automatically, follow this <a href='docs/get-started/quick-start'>link</a>.
-</body>
-
+  <body>
+    If you are not redirected automatically, follow this
+    <a href="docs/webiny/introduction">link</a>.
+  </body>
 </html>
